--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.18.0",
     "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.7",
     "sharp": "^0.33.5",
