--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@astrojs/image": "^0.18.0",
     "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/vue": "^5.0.6",
     "astro": "^5.1.7",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vue": "^3.5.13",
+    "vue3-carousel": "^0.13.0"
   }
 }
