--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vue": "^5.0.6",
     "astro": "^5.1.7",
+    "prettier-plugin-astro": "^0.14.1",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
     "vue3-carousel": "^0.13.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
